--- a/.github/workflows/deploy-render.yml
+++ b/.github/workflows/deploy-render.yml
@@ -24,6 +24,6 @@ jobs:
 
       - name: Deploy to Render
         env:
-           RENDER_DEPLOY_HOOK_URL: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+           RENDER_DEPLOY_HOOK_URL: ${{ secrets.l }}
         run: |
           curl -X POST $RENDER_DEPLOY_HOOK_URL
